--- a/EDAonCarSales.ipynb
+++ b/EDAonCarSales.ipynb
@@ -2200,7 +2200,7 @@
    "metadata": {},
    "source": [
     "The pie chart represents data in a pictorial form, making it easier to visualize and understand the proportionate parts or composition of a data set.\n",
-    "Here represent the piechart of 'Country' in this dataset"
+    "Here represent the piechart of 'Owner' in this dataset"
    ]
   },
   {
